Fix filters alignment

--- a/public/css/tmsm-werecruit-public.less
+++ b/public/css/tmsm-werecruit-public.less
@@ -45,7 +45,7 @@
         margin-bottom: 20px;
 
         > * {
-            vertical-align: middle;
+            vertical-align: top;
         }
     }
 
